<resources>
    <string name="app_name">GpsController</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">设备</string>
    <string name="title_notifications">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_find_image">从照片中获取二维码</string>

    <!-- Strings related to login -->
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_underline"><b>登录</b></string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="str_noaccount_register">没有账号？注册</string>
    <string name="str_forget_passwd">忘记密码</string>
    <string name="str_phone">手机号</string>
    <string name="str_remember_passwd">记住密码</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="permission_rationale">"需要读取联系人的权限"</string>
    <string name="error_network_dis">请检查网络</string>
    <string name="error_link_server">服务器连接异常</string>
    <string name="str_vehicle_alarm">车载报警器</string>
    <string name="str_sceurity_experts_around_you">你身边的安全专家</string>

    <!--注册-->
    <string name="str_register">注册</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="str_verification_code">验证码</string>
    <string name="str_usename">用户名</string>
    <string name="re_enter_passwwd">重新输入密码</string>
    <string name="str_have_account_login">有账号，请</string>
    <string name="error_double_passwd_different">两次输入的密码不同</string>
    <string name="count_down">%ss</string>
    <string name="str_register_ing">正在注册</string>
    <string name="str_register_success">注册成功</string>
    <string name="str_register_fail">注册失败</string>
    <string name="str_link_server_fail">连接服务器失败</string>
    <string name="str_logout">退出登录</string>
    <string name="str_logout_fail">退出登录失败</string>

    <!--忘记密码-->
    <string name="str_reset_passwd">重置密码</string>

    <!--跳过-->
    <string name="str_skip">跳过</string>

    <!--设备-->
    <string name="str_my_device">我的设备</string>
    <string name="havenot_device">没有设备</string>
    <string name="str_offline_device">离线设备</string>
    <string name="str_bundle_device">在线设备</string>
    <string name="str_add_device">添加设备</string>
    <string name="str_online">在线</string>
    <string name="str_offine">离线</string>
    <string name="str_unbind">解除绑定</string>
    <string name="str_unbind_device">解除绑定设备</string>
    <string name="str_bind_success">设备绑定成功</string>
    <string name="str_start_subscribe">开始订阅数据</string>

    <!--switch-->
    <string name="str_open">开</string>
    <string name="str_close">关</string>

    <string name="str_is_not_num">输入的不是数值</string>

    <string name="str_set_fence">设置围栏</string>

    <string name="str_set_fence_fail">设置围栏失败</string>
    <string name="str_link_setver_fail">连接服务器失败</string>
    <string name="str_set_fence_success">设置围栏成功</string>
    <string name="str_cancel_fence_success">取消围栏成功</string>
    <string name="str_cancel_fence_fail">取消围栏失败</string>
    <string name="str_not_get_location">没有获得位置</string>

    <string name="str_alarm">警告</string>
    <string name="str_device_name">设备名</string>
    <string name="str_device_id">设备id</string>
    <string name="str_out_fence">超出围栏</string>
    <string name="str_show_alarm">出现警告</string>


    <!--pop-->
    <string name="str_close_windows">关闭窗口</string>
    <string name="str_setting_fortification">设置设防：</string>
    <string name="str_setting_battery">设置电源：</string>
    <string name="str_setting_fence">设置围栏:</string>

</resources>
