<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context="com.sciento.wumu.gpscontroller.UserModule.UserForgetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gpslogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/str_vehicle_alarm"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/str_sceurity_experts_around_you"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/colorWhite"

                >
                <com.sciento.wumu.gpscontroller.View.CleanEditText
                    android:id="@+id/tv_forget_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_phone"
                    android:inputType="number"
                    android:textColor="@color/colorWhite" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send_verifi_code"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@color/color_get_vertifition"
                android:text="@string/send_verification_code"
                android:textSize="12sp" />

        </LinearLayout>


        <!-- identify code -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">
            <com.sciento.wumu.gpscontroller.View.CleanEditText
                android:id="@+id/tv_forget_identify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_verification_code"
                android:inputType="number"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true">
            <com.sciento.wumu.gpscontroller.View.CleanEditText
                android:id="@+id/tv_forget_enter_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>



        <!-- rest passwd Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_button"
            android:padding="12dp"
            android:text="@string/str_reset_passwd"
            android:textColor="@color/colorWhite" />



    </LinearLayout>


</ScrollView>
